--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,19 @@
     <title>ШРИ [team4]</title>
 </head>
 <body>
-    <div class="layout"></div>
+    <div class="layout">
+
+        <div class="header">
+            <img src="logo.png" alt="" class="header__logo">
+            <div class="header_search">
+                <div class="header_search__label">
+                    <a href="#" class="header_search__label-link">Погода</a>
+                </div>
+                <input class="header_search__input" type="text">
+                <button class="header_search__button">Найти</button>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
