header (not cross-browser tested)

--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,17 @@
         <div class="layout">
 
             <div class="header">
-                <img src="logo.png" alt="" class="header__logo">
-                <div class="header_search">
+                <a href="#">
+                    <img src="images/header__logo.png" alt="" class="header__logo">
+                </a>
+                <div class="header__search">
                     <div class="header_search__label">
                         <a href="#" class="header_search__label-link">Погода</a>
                     </div>
                     <input class="header_search__input" type="text">
-                    <button class="header_search__button">Найти</button>
+                    <button class="button button-search">Найти</button>
                 </div>
             </div>
-
         </div>
         <!--end header-->
 
