--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,17 @@
         <!--end now-->
 
         <!--forecast-->
+            <!-- tabs -->
+                <div class="grid__row">
+                    <div class="grid_cols_12">
+                        <div class="tabs">
+                            <span class="button button-active">кратко</span>
+                            <span class="button">подробно</span>
+                            <span class="button">наглядно</span>
+                        </div>
+                    </div>
+                </div>
+            <!-- end tabs -->
         <!--end forecast-->
 
         <!--direct-->
