--- a/src/index.html
+++ b/src/index.html
@@ -34,14 +34,10 @@
 
         <!--forecast-->
             <!-- tabs -->
-                <div class="grid__row">
-                    <div class="grid_cols_12">
-                        <div class="tabs">
-                            <span class="button button-active">кратко</span>
-                            <span class="button">подробно</span>
-                            <span class="button">наглядно</span>
-                        </div>
-                    </div>
+                <div class="tabs">
+                    <button class="button  tabs__tab tabs__tab_left_radius">кратко</button>
+                    <button class="button tabs__tab button-active">подробно</button>
+                    <button class="button tabs__tab tabs__tab_right_radius">наглядно</button>
                 </div>
             <!-- end tabs -->
         <!--end forecast-->
