hourly forecast div

--- a/src/index.html
+++ b/src/index.html
@@ -68,6 +68,82 @@
                     <button class="button tabs__tab tabs__tab_right_radius">наглядно</button>
                 </div>
             <!-- end tabs -->
+            <!-- forecast_hours -->
+                <div class="forecast_hours">
+                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-2">
+                        <div class="forecast_hours__value">-1</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-2">
+                        <div class="forecast_hours__value">-2</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-0">
+                        <div class="forecast_hours__value">0</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-2">
+                        <div class="forecast_hours__value">+1</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-4">
+                        <div class="forecast_hours__value">+3</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-6">
+                        <div class="forecast_hours__value">+5</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-0">
+                        <div class="forecast_hours__value">0</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-4">
+                        <div class="forecast_hours__value">-3</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-6">
+                        <div class="forecast_hours__value">-5</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-6">
+                        <div class="forecast_hours__value">-6</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-6">
+                        <div class="forecast_hours__value">-6</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-6">
+                        <div class="forecast_hours__value">-6</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-4">
+                        <div class="forecast_hours__value">-3</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-0">
+                        <div class="forecast_hours__value">0</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-2">
+                        <div class="forecast_hours__value">+1</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-6">
+                        <div class="forecast_hours__value">+5</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-8">
+                        <div class="forecast_hours__value">+8</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-2">
+                        <div class="forecast_hours__value">+2</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-2">
+                        <div class="forecast_hours__value">+2</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-0">
+                        <div class="forecast_hours__value">0</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-2">
+                        <div class="forecast_hours__value">-1</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-2">
+                        <div class="forecast_hours__value">-1</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-4">
+                        <div class="forecast_hours__value">-3</div>
+                    </div>
+                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-10">
+                        <div class="forecast_hours__value">-9</div>
+                    </div>
+                </div>
+            <!-- end forecast_hours -->
         <!--end forecast-->
 
         <!--direct-->
