убрал лишний класс заголовка

--- a/src/index.html
+++ b/src/index.html
@@ -74,9 +74,9 @@
                     <thead class="forecast_full__header">
                         <tr class="forecast_full__header-row">
                             <td colspan="5"></td>
-                            <td class="forecast_full__header-title">давление, мм рт. ст.</td>
-                            <td class="forecast_full__header-title">влажность</td>
-                            <td class="forecast_full__header-title">ветер, м/c</td>
+                            <td>давление, мм рт. ст.</td>
+                            <td>влажность</td>
+                            <td>ветер, м/c</td>
                         </tr>
                     </thead>
                     <tbody>
