--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ШРИ [team4]</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!--layout-->
@@ -13,7 +13,7 @@
 
             <div class="header">
                 <a href="#">
-                    <img src="images/header__logo.png" alt="" class="header__logo">
+                    <img src="/assets/images/header__logo.png" alt="" class="header__logo">
                 </a>
                 <div class="header__search">
                     <div class="header_search__label">
@@ -289,7 +289,7 @@
             </div>
             <div class="direct__row">
                 <div class="direct__block">
-                    <img class="direct__block-img" src="images/direct__block1.png">
+                    <img class="direct__block-img" src="/assets/images/direct__block1.png">
                     <div class="direct__block__info">
                         <h4 class="direct__block-title">Студия элитной итальянской мебели</h4>
                         <p class="direct__block-text">
@@ -300,7 +300,7 @@
                 </div>
                 <div class="direct__block direct__block-middle">
                     <div class="direct__block-img">
-                        <img src="images/direct__block2.png">
+                        <img src="/assets/images/direct__block2.png">
                     </div>
                     <div class="direct__block__info">
                         <h4 class="direct__block-title">SEO. Поисковая оптимизация сайиа!</h4>
@@ -312,7 +312,7 @@
                 </div>
                 <div class="direct__block">
                     <div class="direct__block-img">
-                        <img src="images/direct__block3.png">
+                        <img src="/assets/images/direct__block3.png">
                     </div>
                     <div class="direct__block__info">
                         <h4 class="direct__block-title">Отели Греции онлайн - Херсонес</h4>
