минификация js и css (с аргументом --prod), базовый роутер

--- a/index.html
+++ b/index.html
@@ -330,5 +330,6 @@
         <!--end footer-->
     </div>
     <!--end layout-->
+    <script src="/assets/js/app.js" type="text/javascript"></script>
 </body>
 </html>
