--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,33 @@
         <!--end city_select-->
 
         <!--now-->
+        <div class="current-weather">
+            <div class="current-weather__title">
+                Сейчас
+            </div>
+            <div class="current-weather__collection">
+                <div class="curent-weather__layout curent-weather__layout_state_now temp-color_30">
+                    <div class="curent-weather__container curent-weather__container_state_now">
+                        +30
+                    </div>
+                </div>
+                <div class="curent-weather__layout curent-weather__layout_state_day temp-color_15">
+                    <div class="curent-weather__container">
+                        +15
+                    </div>
+                </div>
+                <div class="curent-weather__layout curent-weather__layout_state_tonight temp-color_4">
+                   <div class="curent-weather__container">
+                        +4
+                    </div>
+                </div>
+                <div class="curent-weather__layout  curent-weather__layout_state_night temp-color_-2">
+                    <div class="curent-weather__container">
+                        -2
+                    </div>
+                </div>
+            </div>
+        </div>
         <!--end now-->
 
         <!--forecast-->
