--- a/src/index.html
+++ b/src/index.html
@@ -59,30 +59,69 @@
 
         <!--now-->
         <div class="current-weather">
-            <div class="current-weather__title">
-                Сейчас
+            <div class="current-weather_columns">
+                <div class="current-weather_column current-weather_column__now">
+                    <div class="current-weather_title">Сейчас</div>
+                    <div class="current-weather_content temp-color_30">
+                        <div class="current-weather_column-container">
+                            <div class="current-weather_temp-value">+30 &deg;C</div>
+                            <div class="current-weather_icon">
+                                <img src="http://ekb.shri14.ru/icons/bkn_d.svg" alt="">
+                                <div class="current-weather_icon__text">малооблачно</div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="current-weather_column">
+                    <div class="current-weather_title">Днем</div>
+                    <div class="current-weather_content temp-color_15">
+                        <div class="current-weather_column-container">
+                            <div class="current-weather_temp-value">+15 &deg;C</div>
+                            <div class="current-weather_icon">
+                                <img src="http://ekb.shri14.ru/icons/bkn_d.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="current-weather_column">
+                    <div class="current-weather_title">Вечером</div>
+                    <div class="current-weather_content temp-color_4">
+                        <div class="current-weather_column-container">
+                            <div class="current-weather_temp-value">+4 &deg;C</div>
+                            <div class="current-weather_icon">
+                                <img src="http://ekb.shri14.ru/icons/bkn_d.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="current-weather_column">
+                    <div class="current-weather_title">Ночью</div>
+                    <div class="current-weather_content temp-color_-2">
+                        <div class="current-weather_column-container">
+                            <div class="current-weather_temp-value">-2 &deg;C</div>
+                            <div class="current-weather_icon">
+                                <img src="http://ekb.shri14.ru/icons/bkn_d.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="current-weather_column">
+                    <div class="current-weather_content__info">
+                        <ul>
+                            <li>Давление: 732 мм рт. ст.</li>
+                            <li>Ветер: западный, 6.0 м/с (21.6 км/ч)</li>
+                            <li>Влажность: 93%</li>
+                            <li>Восход: 08:53 Заход: 16:33</li>
+                            <li>
+                                Данные зарегистрированы более получаса назад
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div class="current-weather__collection">
-                <div class="curent-weather__layout curent-weather__layout_state_now temp-color_30">
-                    <div class="curent-weather__container curent-weather__container_state_now">
-                        +30
-                    </div>
-                </div>
-                <div class="curent-weather__layout curent-weather__layout_state_day temp-color_15">
-                    <div class="curent-weather__container">
-                        +15
-                    </div>
-                </div>
-                <div class="curent-weather__layout curent-weather__layout_state_tonight temp-color_4">
-                   <div class="curent-weather__container">
-                        +4
-                    </div>
-                </div>
-                <div class="curent-weather__layout  curent-weather__layout_state_night temp-color_-2">
-                    <div class="curent-weather__container">
-                        -2
-                    </div>
-                </div>
+            <div class="current-weather_footer">
+                Вчера +10 &deg;
             </div>
         </div>
         <!--end now-->
