forecast constructor override, classname fix

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <!-- end full view -->
 
             <!-- short view -->
-                <div class="forecast__short">
+                <div class="forecast_short">
 
                 </div>
             <!-- end short view -->
