переключение табов, убран плейсхолдер для почасового показа, быстрый фикс стилей

--- a/index.html
+++ b/index.html
@@ -67,10 +67,6 @@
 
                 </div>
 
-
-
-
-
                 <!--end now-->
             </div>
             <div class="current-weather_adv-wrapper">
@@ -81,97 +77,12 @@
         <!--end city_select + now block-->
 
         <!--forecast-->
-            <!-- tabs -->
-                <div class="tabs">
-                </div>
-            <!-- end tabs -->
-
-            <!-- full view -->
-            <table class="forecast_full"></table>
-            <!-- end full view -->
-
-            <!-- short view -->
-                <div class="forecast_short">
-
-                </div>
-            <!-- end short view -->
-
-            <!-- hours view -->
-                <div class="forecast_hours">
-                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-2">
-                        <div class="forecast_hours__value">-1</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-2">
-                        <div class="forecast_hours__value">-2</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-0">
-                        <div class="forecast_hours__value">0</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-2">
-                        <div class="forecast_hours__value">+1</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-4">
-                        <div class="forecast_hours__value">+3</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-6">
-                        <div class="forecast_hours__value">+5</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-0">
-                        <div class="forecast_hours__value">0</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-4">
-                        <div class="forecast_hours__value">-3</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-6">
-                        <div class="forecast_hours__value">-5</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-6">
-                        <div class="forecast_hours__value">-6</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-6">
-                        <div class="forecast_hours__value">-6</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-6">
-                        <div class="forecast_hours__value">-6</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-4">
-                        <div class="forecast_hours__value">-3</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-0">
-                        <div class="forecast_hours__value">0</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-2">
-                        <div class="forecast_hours__value">+1</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-6">
-                        <div class="forecast_hours__value">+5</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-8">
-                        <div class="forecast_hours__value">+8</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-2">
-                        <div class="forecast_hours__value">+2</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-plus-2">
-                        <div class="forecast_hours__value">+2</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-0">
-                        <div class="forecast_hours__value">0</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-2">
-                        <div class="forecast_hours__value">-1</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-2">
-                        <div class="forecast_hours__value">-1</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-4">
-                        <div class="forecast_hours__value">-3</div>
-                    </div>
-                    <div class="forecast_hours__column forecast_hours__column-temperature-minus-10">
-                        <div class="forecast_hours__value">-9</div>
-                    </div>
-                </div>
-            <!-- end hours view -->
+            <div class="tabs"></div>
+            <div class="forecast">
+                <table class="forecast_full"></table>
+                <div class="forecast_short"> </div>
+                <div class="forecast_hours"></div>
+            </div>
         <!--end forecast-->
 
         <!--direct-->
