--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
         </div>
     </div>
     <!--end footer-->
+    <script src="//yandex.st/jquery/2.1.1/jquery.min.js" type="text/javascript"></script>
     <script src="/assets/js/app.js" type="text/javascript"></script>
 </body>
 </html>
