--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>ШРИ [team4]</title>
+    <title>Погода</title>
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
