--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ШРИ [team4]</title>
+    <link rel="stylesheet" href="//yastatic.net/jquery-ui/1.11.2/themes/base/jquery-ui.min.css">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
@@ -153,6 +154,7 @@
     </div>
     <!--end footer-->
     <script src="//yandex.st/jquery/2.1.1/jquery.min.js"></script>
+    <script src="//yastatic.net/jquery-ui/1.11.2/jquery-ui.min.js"></script>
     <script src="/assets/js/app.js"></script>
 </body>
 </html>
