--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
     </div> <!--middle__wrapper end->
     <!--end footer-->
     <script src="//yandex.st/jquery/2.1.1/jquery.min.js"></script>
+    <script src="//yastatic.net/jquery-ui/1.11.2/jquery-ui.min.js"></script>
     <script src="/assets/js/app.js"></script>
 </body>
 </html>
